--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
             "inlineStyleLanguage": "scss",
             "preserveSymlinks": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/scss/styles.scss"],
+            "styles": [
+              "src/scss/styles.scss",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+            ],
             "scripts": [],
             "allowedCommonJsDependencies": []
           },
