--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@coreui/icons": "^3.0.0",
     "@coreui/icons-angular": "~4.3.9",
     "@coreui/utils": "^1.3.1",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-select/ng-select": "^10.0.3",
     "@ngrx/effects": "^15.3.0",
     "@ngrx/store": "^15.3.0",
