--- a/angular.json
+++ b/angular.json
@@ -33,10 +33,14 @@
             "preserveSymlinks": true,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/scss/styles.scss",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/scss/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
             "allowedCommonJsDependencies": []
           },
           "configurations": {
