--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "@ng-select/ng-select": "^10.0.3",
     "@ngrx/effects": "^15.3.0",
     "@ngrx/store": "^15.3.0",
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "jquery": "^3.6.4",
     "ngrx-store-localstorage": "^15.0.0",
     "ngx-avatars": "^1.5.0",
     "ngx-bootstrap": "^10.2.0",
     "ngx-toastr": "^16.1.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -53,6 +57,7 @@
     "@angular/compiler-cli": "^15.1.2",
     "@angular/localize": "^15.1.2",
     "@types/jasmine": "^4.3.1",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
