--- a/angular.json
+++ b/angular.json
@@ -34,9 +34,10 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/scss/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"],
             "allowedCommonJsDependencies": []
           },
           "configurations": {
