--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-select/ng-select": "^10.0.3",
     "@ngrx/effects": "^15.3.0",
     "@ngrx/store": "^15.3.0",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "ngrx-store-localstorage": "^15.0.0",
     "ngx-avatars": "^1.5.0",
