--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "text-book-corporation",
+  "homepage":"https://Vishnu196.github.io/textbook",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "check": "npx prettier --check . && ng lint",
@@ -59,6 +62,7 @@
     "@typescript-eslint/parser": "5.48.2",
     "eslint": "^8.33.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
