--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "text-book-corporation",
   "version": "1.0.0",
+  "homepage": "https://vishnu196a.github.io/textbook",
   "scripts": {
+    "deploy": "gh-pages -d build",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
